# ddcrate-rs

./: Cargo.toml  README.md
ddcrate/: Cargo.toml
ddcrate-cli/: Cargo.toml
ddcrate-cli/src/: main.rs
ddcrate/src/: lib.rs
example_data/: default_config.toml
