[package]
name = "ddcrate-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
ddcrate = { version = "0.1.0", path = "../ddcrate" }
once-cell-regex = "0.2.1"
serde = "1.0.171"
toml = "0.7.6"
