[package]
name = "ddcrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
glob = "0.3.1"
log = "0.4.19"
once-cell-regex = "0.2.1"
once_cell = "1.18.0"
ordered-float = "3.7.0"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.43"
toml = "0.7.6"
walkdir = "2.3.3"
